修改申请发票页面

--- a/js/pages/user/delivery-address-add.html
+++ b/js/pages/user/delivery-address-add.html
@@ -10,15 +10,15 @@
         </div>
         <div class="mui-input-row">
             <label>姓名</label>
-            <input type="text" ms-duplex="name" name="name" class="mui-input-clear" placeholder="收货人姓名">
+            <input type="text" ms-duplex="editDeliveryAddress['name']" name="name" class="mui-input-clear" placeholder="收货人姓名">
         </div>
         <div class="mui-input-row">
             <label>手机号</label>
-            <input type="tel" ms-duplex="mobile" name="mobile" class="mui-input-clear" placeholder="11位有效手机号">
+            <input type="tel" ms-duplex="editDeliveryAddress['mobile']" name="mobile" class="mui-input-clear" placeholder="11位有效手机号">
         </div>
         <div class="mui-input-row">
             <label>收货地址</label>
-            <input type="text" ms-duplex="fullAddress" name="fullAddress" class="mui-input-clear" placeholder="收货地址">
+            <input type="text" ms-duplex="editDeliveryAddress['fullAddress']" name="fullAddress" class="mui-input-clear" placeholder="收货地址">
         </div>
     </div>
 </div>
