完成：发票费用支付（支付宝、微信支付） 解决了微信里可以直接进行支付宝支付。

--- a/js/pages/user/invoice-apply.html
+++ b/js/pages/user/invoice-apply.html
@@ -130,6 +130,6 @@
         </div>
     </div>
     <nav class="mui-bar mui-bar-tab" style="padding: 10px;">
-        <button type="button" class="mui-btn mui-btn-danger mui-pull-right btn" ms-click="toPay()">支付</button>
+        <button type="button" class="mui-btn mui-btn-danger mui-pull-right btn" ms-click="saveInvoice()">支付</button>
     </nav>
 </div>
