增加：支付成功提示页

--- a/js/pages/user/invoice-apply.html
+++ b/js/pages/user/invoice-apply.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div ms-if="invoiceType == 2">
-                <input type="text" ms-duplex="title" class="mui-input-clear" placeholder="请输入公司抬头">
+                <input type="text" ms-duplex="head" class="mui-input-clear" placeholder="请输入公司抬头">
             </div>
         </div>
     </div>
