项目结构调整；修改订单页面

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -39,7 +39,7 @@
                     <div class="small" style="margin: 20px auto;height: 40px; overflow:hidden;">{{room.designer.message}}</div>
                     <span class="small" style="position: relative;top: -38px;left: 8px;float: right;">...</span>
 
-                    <button class="mui-btn" style="margin-bottom: 30px;" onclick="popover('assess.html',loadUrl)">更多信息</button>
+                    <button class="mui-btn" style="margin-bottom: 30px;" onclick="popover('./util/assess.html',loadUrl)">更多信息</button>
                 </div>
             </section>
 
