支付完成通知页面

--- a/js/pages/alipay/alipay-iframe.html
+++ b/js/pages/alipay/alipay-iframe.html
@@ -4,6 +4,6 @@
         border: 0;
     }
 </style>
-<iframe id="myiframe" ms-controller="alipay" ms-attr-src="payUrl" scrolling="no" frameborder="0">
-
+<iframe id="myiframe" ms-controller="alipay" ms-attr-src="payUrl" scrolling="auto" frameborder="0">
+赞不支持该功能！
 </iframe>
