调整样式，先不压缩css

--- a/js/util/roomSlide.html
+++ b/js/util/roomSlide.html
@@ -9,7 +9,7 @@
         </div>
     </a>
     <div class="mui-content-padded mui-text-left designer-info">
-        <h4 ms-on-tap="goRoom(el.id)">{{el.name}}<span style="color: #cc9966;"> ★★★★★</span></h4>
+        <span ms-on-tap="goRoom(el.id)">{{el.name}}<span style="color: #cc9966;"> ★★★★★</span></span>
         <!-- <p class="mui-ellipsis" style="width:60vw;">{{el.introduction}}</p> -->
         <div ms-on-tap="goHotelById(el.hotel.id)">
             <i ms-css-background-image="url({{urlAPINet + el.hotel.logoUrl}})"></i>
