--- a/js/util/roomSlide-room.html
+++ b/js/util/roomSlide-room.html
@@ -1,4 +1,10 @@
-<div class="mui-text-right">
-    <span class="slide-room" ms-on-tap="goRoom(el.id)">{{el.name}}</span>
-    <span class="bs-text-yellow">★★★★★</span>
+<style>
+    .middle {
+        position: relative;
+        top: 25%;
+    }
+</style>
+<div class="mui-text-right" style="height: 45px;">
+    <span class="slide-room middle" ms-on-tap="goRoom(el.id)">{{el.name}}</span>
+    <span class="bs-text-yellow middle" style="margin-right: 13px; font-size: 1.1rem; letter-spacing: 3px;">★★★★★</span>
 </div>
