房间页面换钟表图标

--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -2,7 +2,7 @@
     <div class="mui-scroll">
         <div ms-controller="hotel">
             <div style="position: absolute;top: 245px;z-index: 10;right: 0;padding-right: 10px;">
-                <button type="button" class="calender" style="background-image: url(img/calender.png);" ms-on-tap="openTimePanel">
+                <button type="button" class="calender-icon" style="background-image: url(img/calender.png);" ms-on-tap="openTimePanel">
                 <div style="margin: 7px 1px 0 0">18</div>
                 </button>
             </div>
