--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -52,7 +52,7 @@
                 <br>
                 <span ms-repeat-cl="el.orderCustomerList">{{cl.name}}&nbsp;</span>
             </h5>
-            <span style="position: absolute; bottom: 7px; right: 15px;">¥{{el.amount}}</</span>
+            <span style="position: absolute; bottom: 7px; right: 15px;">¥{{el.amount}}</span>
         </li>
     </ul>
     <div style="text-align: center;margin-top: -14px;background: #fff;height: 40px;padding: 10px;" ms-click="goHotelById(data.hotel.id)" ms-if="data.status==1">
