--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -1,7 +1,7 @@
 <div ms-controller="room">
     <div id="pullrefresh" class="mui-scroll-wrapper" style="background-color: #DCD9D5">
         <div class="mui-scroll">
-            <div class="swiper-container swiper1" style="z-index: 0;height: 250px;">
+            <div class="swiper-container swiper1" style="z-index: 0;height: 300px;">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide" ms-repeat="room.roomGalleryList" data-repeat-rendered="swiper1Render">
                         <div style="width: 100%;height: 100%;background-size: cover;background-position: center;" ms-css-background-image="'url(' + urlAPINet + el.imgUrl+')'" ms-attr-data-preview-src="urlAPINet + el.imgUrl" data-preview-group="1" ms-data-tag="el.imgDesc">
@@ -17,7 +17,8 @@
                         <p class="room-name">{{room.name}}</p>
                         <p class="hotel-address">{{room.hotel.address}}</p>
                     </div>
-                    <span ms-on-tap="openNav()" class="map" style="background-image: url(img/map.png); top: 0;"></span>
+                    <span ms-on-tap="openNav()" class="line" style="background-image: url(img/line.png); top: 0;position: absolute;
+    margin: 0px 5px 0 175px;"></span>
                 </div>
                 <div class="swiper-container swiper3 room-amenity">
                     <div class="swiper-wrapper" style="padding-left: 0;">
