修改bug;调首页、酒店页、房间页字体样式

--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -24,10 +24,10 @@
                                 <i>{{alias}}酒店&nbsp;</i><i>one'own</i>
                             </td> -->
                             <td class="mui-ellipsis small" valign="top">
-                                <i>{{alias}}酒店&nbsp;</i><i>one'own</i><br />
-                                <i style="font-size: 1rem; margin-top: 4px; color: #999;">{{name}}</i>
+                                <i class="bs-text-larger">{{alias}}酒店&nbsp;</i><i>one'own</i><br />
+                                <i class="bs-text-large bs-text-gray" style="margin-top: 4px;">{{name}}</i>
                             </td>
-                            <td class="tdclass" style="font-size: 1rem; color: #333; width: 60px;">
+                            <td class="tdclass bs-text-smaller" style="color: #333; width: 48px;">
                                 展开
                             </td>
                         </tr>
