--- a/js/util/roomSlide-room.html
+++ b/js/util/roomSlide-room.html
@@ -5,6 +5,6 @@
     }
 </style>
 <div class="mui-text-right" style="height: 45px;">
-    <span class="slide-room middle" ms-on-tap="goRoom(el.id)">{{el.name}}</span>
-    <span class="bs-text-yellow middle" style="margin-right: 13px; font-size: 1.1rem; letter-spacing: 3px;">★★★★★</span>
+    <span class="slide-room middle bs-text-normal" ms-on-tap="goRoom(el.id)">{{el.name}}</span>
+    <span class="bs-text-yellow bs-text-normal middle" style="margin-right: 13px; letter-spacing: 3px;">★★★★★</span>
 </div>
