房间页面加加同意入住调控

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -78,7 +78,10 @@
                     {{el.name}}
                 </div>
             </section>
-            <div class="bs-text-large" style="width: 95%;padding: 13px 0px;margin: 0 auto;margin-top:20px;">更多房间</div>
+            <div class="bs-text-smaller" style="width: 95%;margin: 10px auto;padding: 10px">
+                <span class="isAgree bs-bg-black"></span>我同意<span class="bs-text-gold">《入住条款》</span>
+            </div>
+            <div class="bs-text-large" style="width: 95%;padding: 10px 0 14px 10px;margin: 0 auto;">更多房间</div>
             <div class="swiper-container swiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide" ms-repeat="list" data-repeat-rendered="swiper2Render">
